--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		
+	<head lang="en">
+		<meta charset="UTF-8">
+		<title></title>
 	</head>
 	<body>
 		
 	</body>
+	<script type="text/javascript"
+			src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js"></script>
 </html>
